@@ -1,4 +1,4 @@
 DIST tuxanci-0.18rc2.tar.bz2 3146646 RMD160 293fe151d77ff1a2b3311db63c949e7b8c9fdd28 SHA1 30048db90522791fc1d2cebebf1dd640fb159932 SHA256 4fdd63119219c6656108d760855b2abfd167c05b17e5c6b3cfbeaf6742a95d1a
-EBUILD tuxanci-0.18_rc2.ebuild 1088 RMD160 c961a8d976be6b620b1c2272c485f43f3ff13452 SHA1 fac3262c5286f7d0658d4c4614afc0a9725a46e7 SHA256 58a9642114ce4ebeba2d77ac2453d0550f6ab9e694aa37513bdaa1b793579615
-MISC ChangeLog 900 RMD160 7a36a7812db8f631e6710341e49e749e3017ea5b SHA1 6e6dcf89ce6679678e97409f68644c2bbc262631 SHA256 df9e7bd6318f6dace6d963343f8003dc14d77fe8688f130b46bb66da05513319
+EBUILD tuxanci-0.18_rc2.ebuild 1096 RMD160 f6c73d4d59c5115cab295d1001a22d4e45f48d50 SHA1 8dd8459acb8a88e918d1d917866c37ca29043278 SHA256 55df81a04f13312328c5c0a1e75b36f43e1c833839d91befd2b04e5d7c0d89a0
+MISC ChangeLog 998 RMD160 2b9daa5c1ee9a711a94e2e35d5fba50b75435fc0 SHA1 12b0d848320a1001cdbfff2a207365254b76ae15 SHA256 bcc8da15b6c7bcdf1cb818056b8c9d896d94f054ec42f26374846bf688b66dec
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
